syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.goflake";
option java_outer_classname = "Goflake";

package main;

service Goflake {
  rpc GetID (GetIDRequest) returns (GetIDResponse) {}
}

message GetIDRequest {
}

message GetIDResponse {
  string ID = 1;
}
